Now the seek buttons use icons from Glyphicons as the other buttons.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -93,8 +93,8 @@
               </button>
             </div>
             <br>
-            <button id="seek_button" class="btn btn-default" onclick="seek_position('left');"><div>←</div></button>
-            <button id="seek_button" class="btn btn-default" onclick="seek_position('right');"><div>→</div></button>
+            <button id="seek_button" class="btn btn-default" onclick="seek_position('left');"><span class="glyphicon glyphicon-arrow-left"></span></button>
+            <button id="seek_button" class="btn btn-default" onclick="seek_position('right');"><span class="glyphicon glyphicon-arrow-right"></span></button>
           </div>
           <div class="panel-body">
             <h1>
