Added cover art display.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -97,6 +97,7 @@
             <button id="seek_button" class="btn btn-default" onclick="seek_position('right');"><span class="glyphicon glyphicon-arrow-right"></span></button>
           </div>
           <div class="panel-body">
+            <div id="cover_art"></div>
             <h1>
               <span id="track-icon" onclick="clickPlay();" class="glyphicon glyphicon-play"></span>
               <span id="currenttrack"></span>
